# tuxns-pdns-backend

./: .gcc-flags.json  .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  main.cpp  sqlqueries.qrc  tuxns-pdns-backend.pro  tuxns-pdns-backend_automoc.cpp  tuxns.conf  tuxns.pl
TuxNS/: Bootstrap.cpp  Bootstrap.hpp  Configuration.cpp  Configuration.hpp  Connection.cpp  Connection.hpp  DNS.cpp  DNS.hpp  Listener.cpp  Listener.hpp  Log.cpp  Log.hpp  Task.cpp  Task.hpp
TuxNS/PowerDNS/: Method.cpp  Method.hpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp
sql/pg/: Accounts.sql  ByID.sql  ByName.sql  ByType.sql  Domains.sql  Log.sql  LogEntry.sql  Prerequisites.sql  Records.sql  Types.sql  ZoneByID.sql  ZoneByName.sql
